@@ -14,6 +14,7 @@ v8.0.32
 - WL#15348: Support MIT Kerberos library on Windows
 - WL#15036: Support for type hints
 - WL#14861: Remove distutils support
+- BUG#34727432: Fix Django datetime error when USE_TZ=True in settings
 - BUG#34710366: Django implementation does not pass unit tests
 - BUG#34695103: Remove debug messages that shows authentication data
 - BUG#34690501: Connector/Python depends on outdated protobuf
